[package]
name = "syncthing-task-resolve"
description = "Resolve syncthing conflicts for taskwarrior databases"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/syncthing-task-resolve"
repository = "https://github.com/adam-gaia/syncthing-task-resolve"
readme = "README.md"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
directories = "5.0.1"
env_logger = "0.11.5"
jiff = "0.1.15"
log = "0.4.22"
once_cell = "1.20.2"
regex = "1.11.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
task-hookrs = "0.9.0"
taskchampion = { version = "1.0.2", default-features = false, features = [
  "bundled",
] }
tempfile = "3.14.0"
toml = "0.8.19"
uuid = "1.11.0"
which = "7.0.1"
